# YuHome_terminal

./: .gitignore  .gitmodules  MQTT_LOCAL_BROKER.md  README.md  broker.js  build-profile.json5  deploy-log.bat  deploy.bat  deploy.ps1  package-lock.json  package.json  prepare-native-deps.ps1  restart-broker.bat  restart-broker.ps1  screenshot.bat  start-broker.ps1  start-udp-listener.ps1  stop-broker.bat  stop-broker.ps1  鍚姩MQTT-Broker.bat
AppScope/: app.json5
AppScope/resources/base/element/: string.json
certs/: ca-openssl.cnf  ca.crt  dayu-client-openssl.cnf  dayu-client.crt  server-openssl.cnf
docs/: DAYU_LOCAL_GATEWAY_PROTOCOL.md  ir-learning-encrypted-protocol.md  串口配网算法详细设计.md  人脸识别算法详细设计.md  大禹智能家居终端硬件与通信接口说明.md  大禹语音助手算法设计与实现.md  大禹语音模块完整实现逻辑.md  禹家终端详细使用说明.md  项目介绍.md
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5  syscap.json
entry/src/main/cpp/: CMakeLists.txt  face_inference.cpp  local_gateway.cpp  voice_inference.cpp
entry/src/main/ets/bridge/: BridgeTlsClient.ets
entry/src/main/ets/cloud/: CloudMqttClient.ets  CloudSecureClient.ets
entry/src/main/ets/crypto/: CryptoLayer.ets  KeyExchangeLayer.ets  Sm4Gcm.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/face/: FaceAccessManager.ets  FaceInferenceNative.ets
entry/src/main/ets/gateway/: LocalGatewayService.ets
entry/src/main/ets/mqtt/: MqttClient.ets  TlsClientIdentity.ets  TlsIdentityFiles.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/provisioning/: SerialProvisioningProtocol.ets  UsbSerialProvisioningPort.ets
entry/src/main/ets/types/: libface_inference.d.ts  liblocal_gateway.d.ts  libvoice_inference.d.ts
entry/src/main/ets/voice/: SpeakerProfileManager.ets  VoiceAssistant.ets  VoiceAudioBridge.ets  VoiceIntentParser.ets  VoiceRecorderTest.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/rawfile/face_ncnn/: 2d106det.ncnn.param  w600k_mbf.ncnn.param
entry/src/main/resources/rawfile/gateway/: server.crt
entry/src/main/resources/rawfile/voice/asr/: encoder-epoch-99-avg-1.int8.onnx
entry/src/main/resources/rawfile/voice/kws/: encoder-epoch-13-avg-2-chunk-8-left-64.int8.onnx  joiner-epoch-13-avg-2-chunk-8-left-64.int8.onnx  keywords.txt
patches/: nanonnng-handshake-lock.patch
scripts/: convert_face_models.ps1
tools/dayu-audio-service/: README.md  install.ps1  smart_home_audio_service.cfg  smart_home_audio_service.sh  uninstall.ps1
